unpackaged/main/default/objects/Hazard_Alert__c/Hazard_Alert__c.object-meta.xml
<CustomObject>
    <label>Hazard Alert</label>
    <nameField>
        <label>Hazard Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hazard Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>