unpackaged/main/default/objects/Hazard_Alert__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hazard Alerts</relationshipLabel>
    <relationshipName>Hazard_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>