unpackaged/main/default/objects/Hazard_Alert__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Hazard Alerts</relationshipLabel>
    <relationshipName>Hazard_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>