unpackaged/main/default/objects/Hazard_Alert__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Hazard Alerts</relationshipLabel>
    <relationshipName>Hazard_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>